InternexDev_Sandbox/src/objects/WF_RAJ__c.object
<CustomObject>
    <fields>
        <fullName>Adjustment_amount__c</fullName>
        <label>Adjustment amount(RAJ02)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjustment_reason_code__c</fullName>
        <label>Adjustment reason code(RAJ01)</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <defaultValue>&quot;RAJ&quot;</defaultValue>
        <label>Record ID</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_RMH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WF_RMH</label>
        <referenceTo>WF_RMH__c</referenceTo>
        <relationshipLabel>WF_RAJ</relationshipLabel>
        <relationshipName>WF_RAJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WF_RAJ</label>
    <nameField>
        <displayFormat>RAJ-{00000}</displayFormat>
        <label>WF_RAJ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WF_RAJ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>